@@ -4,6 +4,7 @@ import java.awt.*;
 import java.io.*;
 import java.lang.reflect.Array;
 import java.util.ArrayList;
+import java.util.Arrays;
 
 public class Ficheros {
 
@@ -11,6 +12,8 @@ public class Ficheros {
     public static File getFicherousuarios(){
         return new File("datos/usuarios.dat");
     }
+
+
 
     public static File getFicheroUsuarioActual(){
         return new File("datos/usuarioActual.dat");
@@ -20,7 +23,8 @@ public class Ficheros {
         ArrayList<Usuario> usuarios = leerDatos(getFicherousuarios());
         int res = 0;
         if (!usuarios.isEmpty()){
-            res = usuarios.getLast().getId();
+            res =  usuarios.get(usuarios.size() - 1).getId();
+
         }
 
         return res;
@@ -35,7 +39,7 @@ public class Ficheros {
     public static ArrayList<Usuario> leerDatos(File file) throws IOException, ClassNotFoundException {
         ArrayList<Usuario> datos = new ArrayList<>();
 
-        if (file.exists()) {
+        if (file.length() > 0) {
             FileInputStream fin = new FileInputStream(file);
             ObjectInputStream ofin = new ObjectInputStream(fin);
                 while (fin.available() > 0) {
@@ -64,11 +68,7 @@ public class Ficheros {
     }
 
 
-    public static void insertarDatos(ArrayList<Usuario> nuevosDatos, File fichero) throws IOException, ClassNotFoundException {
-        ArrayList<Usuario> datos = leerDatos(fichero);
-
-        datos.addAll(nuevosDatos);
-
+    public static void insertarDatos(ArrayList<Usuario> datos, File fichero) throws IOException, ClassNotFoundException {
         ObjectOutputStream oout = new ObjectOutputStream(new FileOutputStream(fichero));
 
         for(int con2 = 0; con2 < datos.size(); con2++){
@@ -79,6 +79,18 @@ public class Ficheros {
 
     }
 
+    public static void insertarDato(Usuario dato, File fichero) throws IOException, ClassNotFoundException {
+
+        ArrayList<Usuario> usuarios = leerDatos(getFicherousuarios());
+        usuarios.add(dato);
+
+        try (ObjectOutputStream oout = new ObjectOutputStream(new FileOutputStream(getFicherousuarios()))) {
+            for (Usuario reg : usuarios) {
+                oout.writeObject(reg);
+            }
+        }
+    }
+
     public static void insertarSoloUnDato(Object nuevosDato, File fichero) throws IOException, ClassNotFoundException {
         ObjectOutputStream oout = new ObjectOutputStream(new FileOutputStream(fichero));
 
@@ -87,6 +99,15 @@ public class Ficheros {
         oout.close();
     }
 
+    public static boolean setUsuarioActual(String usuario) throws IOException, ClassNotFoundException {
+
+        Usuario encontrado = Usuario.buscarUsuarioPorNombre(usuario);
+        ArrayList<Usuario> usuarios = new ArrayList<>(Arrays.asList(encontrado));
+
+        insertarDatos(usuarios, getFicheroUsuarioActual());
+
+        return true;
+    }
     public static Usuario usuarioActual() throws IOException, ClassNotFoundException {
         return leerDatos(getFicheroUsuarioActual()).get(0);
     }
